2007-04-23  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Changed "Top right" to "Top Panel".
	* accerciser.schemas.in: Changed default layout to a list format in 
	/apps/accerciser/[view name]/layout (bug 432697).
	* src/lib/accerciser/plugin_manager.py: Changed layout to a list 
	format in /apps/accerciser/[view name]/layout (bug 432697).
	* src/lib/accerciser/tools.py: Added a wrapper class for gconf
	list entries.

	* src/lib/accerciser/tools.py: Removed obsolete constants and
	import line (bug 432423).
	
2007-04-19  Eitan Isaacson  <eitan@ascender.com>

	* plugins/Makefile.am: Added script_recorder.glade.
	* plugins/script_recorder.glade: Added.
	* plugins/script_recorder.py: Added script platform selection.
	* src/lib/accerciser/script_playback.py: Fixed some issues with
	application focusing.

	* README:
	* configure.in:
	* debian/changelog: Bumped to version 0.1.2.
	
	* plugins/ipython_view.py: Fixed more selection quirks.

2007-04-17  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Fixed syntax error. 
	* plugins/ipython_view.py: Removed prints.

2007-04-17  Eitan Isaacson  <eitan@ascender.com>
	* plugins/ipython_view.py: Fixed TAB completion on opn brackets
	(bug 427048).

2007-04-16  Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py: * plugins/ipython_view.py: Enable
	Home+Shift overwriting in the prompt.
	* src/lib/accerciser/script_playback.py: run() now returns
	application's PID.
	
2007-04-16 Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py: Fixed copy/paste bug (#425627).
	
2007-04-16 Eitan Isaacson  <eitan@ascender.com>

	* NEWS:
	* README: Updated for upcoming release.

2007-04-15 Eitan Isaacson  <eitan@ascender.com>

	* po/POTFILES.skip: Added accerciser.desktop.in.

2007-04-14 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am: 
	* accerciser.desktop.in.in:
	* accerciser.desktop.in:
	* configure.in: Swapped accerciser.desktop.in for 